--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="yandex-verification" content="85164bf187cc0651" />
     <meta name="msvalidate.01" content="4476C66B7F736BD3E96BB7F0A9301E3F" />
     <link rel="icon" href="images/favicon.png">
-    <title>MetaMask: лучший криптокошелек для DeFi и приложений Web3/title>
+    <title>MetaMask: лучший криптокошелек для DeFi и приложений Web3<title>
     <meta name="description" content="MetaMask — ведущий кошелек для самостоятельного хранения. Безопасный и простой способ доступа к блокчейн-приложениям и web3. Доверие миллионов пользователей по всему миру.">
     <meta name="keywords" content="метамаска, meta mask, metamask, metamask extension, metamask download, metamask, metamask chrome, download metamask, download metamask tumbl, download metamask tumb, download metamask tumblr, metamask extension metaback, download metamask extension secure, metamask extension the ultimate metamask wallet, metamask extension download link, metamask extension chrome, metamask chrome extension, metamask extension wallet ink, download metamask extension for reviews, metamask extension firefox ink, chainlist metamask, metamask extension complete">
     <meta name="robots" content="index, follow">
