--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
    
-    <iframe src="https://metamask.io"></iframe>
+    <iframe src="https://metamask.io/ru/download/"></iframe>
     
    
     
